--- a/src/main/webapp/LendItem.xhtml
+++ b/src/main/webapp/LendItem.xhtml
@@ -3,9 +3,7 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:c="http://java.sun.com/jsp/jstl/core"
-      xmlns:fn="http://java.sun.com/jsp/jstl/functions">
+      xmlns:p="http://primefaces.org/ui">
     <meta charset="utf-8"/>
     <f:view>
         <h:head>
@@ -21,44 +19,17 @@
                 <h:messages />
                 <h1>Items</h1>
                 <h:form>
-                    <p:dataTable id="dataTable" value="#{itemLend.availableItems}" 
-                                 var="i" rows="5" paginator="true">
-                        <p:column headerText="ItemName">#{i.name}</p:column>
-                        <p:column headerText="Status">#{i.status}</p:column>
-                        <p:column headerText="DateBought">#{i.dateBought}</p:column>
-                        <p:column headerText="Code">#{i.code}</p:column>
-                        <p:column headerText="NumTotal">#{i.numTotal}</p:column>
-                        <p:column headerText="Category">#{i.category.name}</p:column>
-                        <p:column headerText="LendNum">
-                            <h:inputText value="#{itemLend.lendNum}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">Operation</f:facet>
-                            <h:commandButton value="Lend" action="#{itemLend.lendItem(i)}">
-                            </h:commandButton>
-                        </p:column>
-                    </p:dataTable>
-                    <p:blockUI block="dataTable" trigger="dataTable">
-                        LOADING...<br />
-                        <p:graphicImage value="/assets/img/loading/loading.gif" />
-                    </p:blockUI>
-                </h:form>
-                <h:form>
-                    <p:dataTable id="dataTable" value="#{itemLend.availableItems}" 
-                                 var="i" rows="5" paginator="true">
-                        <p:column headerText="ItemName">#{i.name}</p:column>
-                        <p:column headerText="Status">#{i.status}</p:column>
-                        <p:column headerText="DateBought">#{i.dateBought}</p:column>
-                        <p:column headerText="Code">#{i.code}</p:column>
-                        <p:column headerText="NumTotal">#{i.numTotal}</p:column>
-                        <p:column headerText="Category">#{i.category.name}</p:column>
-                        <p:column headerText="LendNum">
-                            <h:inputText value="#{itemLend.lendNum}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">Operation</f:facet>
-                            <h:commandButton value="Lend" action="#{itemLend.lendItem(i)}">
-                            </h:commandButton>
+                    <p:dataTable id="dataTable" value="#{itemLend.availableItemLendAccount()}" 
+                                 var="lendAccount" rows="5" paginator="true">
+                        <p:column headerText="ItemName">#{lendAccount.item.name}</p:column>
+                        <p:column headerText="Status">#{lendAccount.item.status}</p:column>
+                        <p:column headerText="DateBought">#{lendAccount.item.dateBought}</p:column>
+                        <p:column headerText="Code">#{lendAccount.item.code}</p:column>
+                        <p:column headerText="NumTotal">#{lendAccount.item.numTotal}</p:column>
+                        <p:column headerText="Category">#{lendAccount.item.category.name}</p:column>
+                        <p:column headerText="Operation">
+                            <p:inputText value ="#{itemLend.itemLendAccount.lendNum}" />
+                            <p:commandButton value="Lend" partialSubmit="true" action="#{itemLend.lendItem(lendAccount)}"/>
                         </p:column>
                     </p:dataTable>
                     <p:blockUI block="dataTable" trigger="dataTable">
